@@ -1,3 +1,10 @@
+2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Add tests checking that symlinks are resolved by `make dist'.
+	* tests/distlinks.test: New test.
+	* tests/Makefile.am (TESTS): Updated accordingly.
+	Suggested by observations from Ralf Wildenhues.
+
 2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Use -9 for maximum xz compression with dist-xz.
